juniper-from-schema/tests/compile_fail/unknown_directive.stderr
error: proc macro panicked
  --> $DIR/unknown_directive.rs:4:1
   |
4  | / juniper_from_schema::graphql_schema! {
5  | |     type Query {
6  | |         string: String! @someDirectiveThatIsntNotSupported
7  | |     }
8  | |
9  | |     schema { query: Query }
10 | | }
   | |_^
   |
   = help: message: 
           
           error: Unknown directive
            --> schema:1:32
             |
           1 |    type Query { string : String ! @ someDirectiveThatIsntNotSupported } schema
             |                                   ^
           
           
           aborting due to previous error
